[package]
name = "show-cuda-info-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name="scirs"
path="src/main.rs"

[dependencies]
anyhow = "1.0.96"
futures = "0.3.31"
humansize = "2.1.3"
nvml-wrapper = "0.10.0"
regex = "1.11.1"
sysinfo = "0.33.1"
tabled = "0.18.0"
tokio ={ version = "1.43.0", features = ["full","macros"] }

[profile.release]
opt-level = 3        # 最高优化级别
lto = true          # 启用链接时优化
codegen-units = 1   # 减少并行代码生成单元以提高优化
panic = 'abort'     # 在 panic 时直接终止，减少二进制大小
strip = true        # 移除调试符号
